# ceres-tutorials

./: README.md
1. HelloCeres/: CMakeLists.txt  build_and_run.sh  main.cpp
2. CurveFitting/: MyOptions.h  Residuals.h  data.h  main.cpp
3. SimpleBA/: CMakeLists.txt  README.md  main.cpp
3. SimpleBA/data/: viewer.m~
3. SimpleBA/include/SimpleBAL/: BALManager.h  OptionConfig.h  Residual.h
4. RobotPose1D/: README.md  build_and_run.sh  main.cpp
4. RobotPose1D/include/RobotPose1D/: Configurations.h  Residuals.h  Robot.h  random.h
